--- a/web-app/src/app/(pages)/prayers/prayers.module.css
+++ b/web-app/src/app/(pages)/prayers/prayers.module.css
@@ -48,6 +48,14 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--secondary-50);
 }
+.prayerPoints p{
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  font-weight: var(--regular);
+  color: var(--foreground);
+  text-align: center;
+  margin-bottom: 2em;
+}
 .add{
   width: 30px;
   height: 30px;
