--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -82,6 +82,7 @@
 .dropdownWrapper {
   position: relative;
   display: inline-block;
+  border-radius: 0 0 var(--br-1) var(--br-1);
 }
 
 ul.sublinks {
@@ -95,6 +96,7 @@ ul.sublinks {
   border-radius: var(--br-1);
   background-color: var(--background);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 0 0 var(--br-1) var(--br-1);
   z-index: 2;
 }
 
@@ -300,6 +302,12 @@ ul.sublinks:hover {
 .button:hover{
   background-color: var(--hoverBg);
   letter-spacing: 3px;
+}
+.disabled {
+  background-color: var(--hoverBg) !important;
+  cursor: not-allowed;
+  letter-spacing: none;
+  opacity: 0.4;
 }
 
 /* CARD */
