--- a/web-app/src/app/(ministries)/departments/departments.module.css
+++ b/web-app/src/app/(ministries)/departments/departments.module.css
@@ -6,3 +6,56 @@
   width: 100%;
   height: auto;
 }
+.ministers{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center; 
+  gap: 2.5em;
+  padding: 3em;
+}
+.minDetails {
+  width: 300px;
+  min-width: 200px;
+  height: fit-content;
+  border-radius: var(--br-2);
+  transition: all 0.3s ease;
+}
+.minDetails{
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.minDetails img{
+  width: 100%;
+  height: 100%;
+  border-radius: var(--br-2);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.minDetails:hover{
+  transform: scale(1.03);
+}
+.ministers img{
+  width: 100%;
+  height: 50%;
+  border-radius: var(--br-2) var(--br-2) 0 0;
+}
+.name{
+  background-color: var(--background);
+  width: 100%; 
+  height: fit-content;
+  padding: 0 0 1em;
+  text-align: center;
+  border-radius: var(--br-2);
+  color: var(--foreground);
+}
+.name h3{
+  font-family: var(--headerFont);
+  font-weight: var(--bold);
+  font-size: var(--p2);
+}
+.name p{  
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+  font-size: calc(var(--p3)*0.8);
+}
