--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -1,6 +1,7 @@
 #admin{
   background: url(../../../../public/images/church-sermon2-768x600.jpg) no-repeat center fixed;
   background-size: cover;
+  position: relative;
 }
 .adminPage{
   width: 100%;
@@ -8,9 +9,10 @@
 }
 .adminWrapper{
   display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .sideBar{
-  /* background-color: var(--primary-50); */
   padding: 2em 0.5em;
   width: 20%;
   height: auto;
@@ -25,14 +27,78 @@
   margin: 0.5em auto;
 }
 .adminTable{
-  flex: 1;
-  padding: 3em 2em;
+  width: fit-content;
+  padding: 3em;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
+.tableHeader{
+  flex: 1;
+  height: auto;
+}
+.tableHeader input{
+  width: 20%;
+  padding: 0.2em 0.5em;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  border:0;
+  outline: none;
+  border-radius: var(--br-1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  letter-spacing: 1px;
+  color: var(--foreground);
+  background-color: var(--secondary-50);
+  opacity: 0.5;
+}
+.tableHeader button{
+  margin-left: 10px;
+}
+.modalOverlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-50);
+  opacity: 0.97;
+  z-index: 2;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+
 .show{
   display: block;
 }
 .hide{
   display: none;
+}
+.phoneNumbersSection {
+  flex: 1;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 3em;
+  padding-right: 4em;
+}
+.phoneNumbers {
+  width: fit-content;
+  height: auto;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem;
+  margin-top: 1rem;
+  border-radius: var(--br-2);
+}
+.phoneNumbers h3{
+  font-family: var(--headerFont);
+  font-weight: var(--medium);
+  margin-bottom: 10px;
+}
+.phoneNumbers p{
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+  margin-bottom: 10px;
 }
