--- a/web-app/src/app/(pages)/give/give.module.css
+++ b/web-app/src/app/(pages)/give/give.module.css
@@ -6,3 +6,76 @@
   width: 100%;
   height: auto;
 }
+.giveContainer{
+  display: flex;
+}
+ .leftSide{
+    width:20%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3em 0  5em;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.rightSide{
+  flex: 1;
+  height: auto;
+  border: 1px solid #2423231A;
+  padding: 2em 0  3em;
+  }
+.rightSide form{
+  background-color: var(--primary-100);
+  width: 50%;
+  height: auto;
+  padding: 2em 0;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--br-2);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+.rightSide h1{
+  font-family: var(--headerFont);
+  font-size: var(--s);
+  font-weight: var(--bold);
+  margin-bottom: 1.2em;
+}
+.formDivs{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.7em 3em;
+    margin-bottom: 10px;
+}
+.formDivs label{
+   margin-bottom: 5px;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  font-weight: var(--medium);
+  color: var(--foreground);
+}
+.formDivs input{
+  width: 100%;
+  padding: 0.2em 0.5em;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  border: 0;
+  outline: none;
+  border-radius: var(--br-1);
+  letter-spacing: 1px;
+  color: var(--foreground);
+  opacity: 0.7;
+}
+.giveButton{
+  width:100%;
+}
+.categoryBtn{
+  width: 70%;
+  margin: 0.5em 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
