--- a/web-app/src/app/(pages)/prayers/prayers.module.css
+++ b/web-app/src/app/(pages)/prayers/prayers.module.css
@@ -31,9 +31,9 @@
   width: 90%;
   height: auto;
 }
+.counsellingForm textarea,
 .prayerPoints input{
   width: 100%;
-  height: 2.5rem;
   padding: 0.2em 0.5em;
   font-family: var(--bodyFont);
   font-size: var(--p3);
@@ -43,6 +43,9 @@
   border-radius: var(--br-1);
   letter-spacing: 1px;
   color: var(--foreground);
+}
+.prayerPoints input{
+  height: 2.5rem;
 }
 .prayerPoints input:focus{
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
