--- a/web-app/src/app/(services)/announcements/announcement.module.css
+++ b/web-app/src/app/(services)/announcements/announcement.module.css
@@ -21,7 +21,7 @@
 }
 .scheduled,
 .next{
-  width: 90%;
+  width: 70%;
   height: auto;                        
   margin: 0.5em auto;
 }
@@ -54,6 +54,7 @@
   margin-bottom: 1.5em;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: transform .3s ease;
+  border-radius: var(--br-2);
 }
 .scheduledService:hover,
 .nextAnnouncement:hover{
@@ -62,11 +63,13 @@
 .announcementThumbnail{
   width: 220px;
   height: 100%;
+  border-radius: var(--br-2) 0 0 var(--br-2);
 }
 .announcementThumbnail img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: var(--br-2) 0 0 var(--br-2);
 }
 .announcementBriefs{
   flex: 1;
@@ -74,6 +77,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-radius:  0 var(--br-2) var(--br-2) 0;
 }
 .announcementBriefs h2{
   font-family: var(--headerFont);
