--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -82,7 +82,7 @@
 .dropdownWrapper {
   position: relative;
   display: inline-block;
-  border-radius: 0 0 var(--br-1) var(--br-1);
+  border-radius: var(--br-1) var(--br-1);
 }
 
 ul.sublinks {
@@ -96,7 +96,7 @@ ul.sublinks {
   border-radius: var(--br-1);
   background-color: var(--background);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 0 0 var(--br-1) var(--br-1);
+  border-radius: var(--br-1) var(--br-1);
   z-index: 2;
 }
 
@@ -111,10 +111,15 @@ ul.sublinks:hover {
   color: var(--tertiary-100);
 }
 .sublinks li{
-  list-style-type: none;
   width: 100%;
+}
+.sublinks li a{
+  width: 100%;
+  display: block;
   padding: 1em 0em;
-  text-align: center;
+}
+.sublinks li:first-child{
+  border-radius: var(--br-1) var(--br-1) 0 0;
 }
 .sublinks li:last-child{
   border-radius: 0 0 var(--br-1) var(--br-1);
@@ -125,18 +130,21 @@ ul.sublinks:hover {
 .sublinks li:hover a{
   color: var(--background);
 }
-.rotated {
+.rotated.dd {
   margin-left: 2px;
   margin-bottom: -1px;
   transition: transform 0.3s ease;
 }
 .dropdown:hover .rotated.dd{
   transform: rotate(180deg);
+  transition: transform 0.3s ease;
 }
 .links a:hover{
   color: var(--tertiary-100);
   font-weight: var(--regular);
 }
+
+.active,
 .links a.active {
   background-color: var(--tertiary-100);
   padding: 0.5em 1em;
@@ -144,6 +152,9 @@ ul.sublinks:hover {
   font-weight: var(--medium);
   border-radius: var(--br-1);
   transition: all 0.3s ease;
+}
+.dropdown.active > .dropdownWrapper{
+  color: var(--background);
 }
 .links a.active:hover{
   background-color: var(--hoverBg);
@@ -159,6 +170,13 @@ ul.sublinks:hover {
 }
 .login a:hover{
   color: var(--tertiary-100);
+}
+.login .active{
+  color: var(--background);
+}
+.login .active:hover{
+  background-color: var(--hoverBg);
+  color: var(--background);
 }
 /* HERO SLIDE */
 .heroSlide{
@@ -310,8 +328,143 @@ ul.sublinks:hover {
   opacity: 0.4;
 }
 
-/* CARD */
-/* FORM */
-/* BUTTON */
+/* TABLE */
+.dataTable {
+  width: fit-content;
+  height: auto;
+  font-family: var(--bodyFont);
+  color: var(--foreground);
+  margin-top: 1em;
+}
+
+.tableWrapper {
+  overflow-x: auto;
+  width: 100%;
+}
+
+.dataTable table {
+  width: 100%;
+  border-collapse: collapse;
+  width: fit-content;
+  min-width: 600px;
+  font-size: var(--p3);
+  cursor: default;
+}
+
+.dataTable thead {
+  background-color: var(--tertiary-100);
+  color: var(--background);
+  font-family: var(--headerFont);
+  font-weight: var(--bold);
+  font-size: var(--p2);
+  width: fit-content;
+}
+
+.dataTable thead:hover{
+  color: var(--foreground);
+}
+
+.dataTable th, .dataTable td {
+  width: fit-content; 
+  padding: 1em;
+  text-align: left;
+  border: 1px solid var(--secondary-100);
+}
+.dataTable td:last-child{
+  width: 190px;
+  text-align: center;
+}
+
+.dataTable td button{
+  margin: 0 3px;
+  display: none;
+}
+.dataTable tr:hover button{
+  display: inline-block;
+}
+
+.dataTable tr:nth-child(even) {
+  background-color: var(--primary-100);
+}
+
+.dataTable tr:hover {
+  background-color: var(--secondary-50);
+}
+
+.dataTableButtons {
+  width: 100%;
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: var(--p2);
+}
+.dataModalTable{
+  position: sticky; 
+  width: 35%;
+  top: 7%;
+  background-color: var(--tertiary-50);
+  padding: 1em 2em;
+  border-radius: var(--br-2);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.dataModalTable h2{
+  text-align: center;
+  font-family: var(--headerFont);
+  font-weight: var(--bold);
+  font-size: var(--p1);
+  margin-bottom: 0.25em;
+  color: var(--foreground);
+}
+.table{
+  width: 100%;
+  height: auto;
+  border-radius: var(--br-1);
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em 0;
+}
+.table label{
+  width: 100%;
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+  font-size: var(--p3);
+  margin-bottom: 3px;
+  color: var(--foreground);
+}
+.table p{
+  color: rgb(240, 113, 113);
+  margin-top: 1px;
+}
+.table input{
+  width: 100%;
+  padding: 0.2em 0.5em;
+  font-family: var(--bodyFont);
+  font-size: calc(var(--p3) - 1px);
+  border: 0;
+  outline: none;
+  border-radius: var(--br-1);
+  letter-spacing: 1px;
+  color: var(--foreground);
+  opacity: 0.85;
+}
+.buttons{
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0em;  
+}
+.buttons button{
+  width: 50%;
+}
+.buttons button:first-child{
+  border-radius: var(--br-1) 0 0 var(--br-1);
+}
+.buttons button:last-child{
+  border-radius:  0 var(--br-1) var(--br-1) 0;
+  box-shadow: none;
+}
 
 
