--- a/web-app/src/app/contact/contact.module.css
+++ b/web-app/src/app/contact/contact.module.css
@@ -6,3 +6,79 @@
   width: 100%;
   height: auto;
 }
+.contactInfo{
+  background: url(../../../public/images/church-sermon-768x600.jpg) no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  padding: 3em 0 4em;
+  position: relative;
+}
+.contactForm{
+  position: relative;
+  background-color: rgba(128,199,199,0.4);
+  margin: auto;
+  width: 30%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2em;
+  z-index: 1;
+  border-radius: var(--br-2);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.formGroup{
+width: 100%;
+height: auto;
+margin-bottom: 1.5em;
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+.contactForm h2{
+  font-family: var(--headerFont);
+  color: var(--foreground);
+  font-weight: var(--bold);
+  font-size: var(--s);
+  margin-bottom: 1.3em;
+  color: var(--background);
+}
+.formGroup label{
+  margin-bottom: 5px;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  font-weight: var(--medium);
+  color: var(--background);
+}
+.formGroup input,
+.formGroup textarea{
+  width: 100%;
+  /* height: 2.5rem; */
+  padding: 0.2em 0.5em;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
+  border: 0;
+  outline: none;
+  border-radius: var(--br-1);
+  letter-spacing: 1px;
+  color: var(--foreground);
+  opacity: 0.7;
+}
+.formGroup textarea{
+  height: 5em;
+  width: 100%;
+}
+.contactButton{
+  width: 100%;
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 0;
+}
