--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -33,7 +33,7 @@
 .detailImage{
   width: 100%;
   height: 95dvh;
-  background: url('../../../public/images/about-us-img-1-1.png') no-repeat center; 
+  background: url('../../public/images/about-us-img-1-1.png') no-repeat center; 
   background-size: contain;
   background-blend-mode: overlay;
 }
@@ -88,7 +88,7 @@
 }
 .prototype{
   position: relative;
-  background: url(../../../public/images/church-sermon-768x600.jpg) no-repeat right fixed var(--primary-50);
+  background: url(../../public/images/church-sermon-768x600.jpg) no-repeat right fixed var(--primary-50);
   background-size: contain;
   object-position: center;
   width: 100%;
@@ -284,7 +284,7 @@
 
 /* PRAYER CTA */
 .cta {
-  background: url(../../../public/images/cta-pray.JPG) no-repeat;
+  background: url(../../public/images/cta-pray.JPG) no-repeat;
   background-color: #040404;
   width: 100%;
   height: 80dvh;
