--- a/web-app/src/app/sermons/sermons.module.css
+++ b/web-app/src/app/sermons/sermons.module.css
@@ -84,6 +84,7 @@
   margin-bottom: 1.5em;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: transform .3s ease;
+  border-radius: var(--br-2);
 }
 .librarySermon:hover,
 .recentSermon:hover{
@@ -92,11 +93,13 @@
 .sermonThumbnail{
   width: 220px;
   height: 100%;
+  border-radius:  var(--br-2) 0  0 var(--br-2);
 }
 .sermonThumbnail img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius:  var(--br-2) 0  0 var(--br-2);
 }
 .sermonBriefs{
   flex: 1;
@@ -104,6 +107,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-radius:  0 var(--br-2) var(--br-2) 0;
 }
 .sermonBriefs h2{
   font-family: var(--headerFont);
@@ -122,6 +126,11 @@
   font-size: var(--p3);
   font-style: italic;
   margin: 10px 0;
+}
+.sermonBriefs pre{
+  margin-top: 3px;
+  font-family: var(--bodyFont);
+  font-size: var(--p3);
 }
 .mediaIcons{
   width: fit-content;
