--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -9,29 +9,28 @@
 }
 .adminWrapper{
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
 .sideBar{
-  padding: 2em 0.5em;
+  padding: 2em 0;
   width: 20%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
 }
 .sideBar button{
   width: 70%;
   margin: 0.5em auto;
 }
 .adminTable{
-  width: fit-content;
+  flex: 1;
   padding: 3em;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: auto;
 }
 .tableHeader{
   flex: 1;
@@ -76,13 +75,8 @@
 }
 .phoneNumbersSection {
   flex: 1;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 3em;
-  padding-right: 4em;
+  padding: 3em 4em;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .phoneNumbers {
   width: fit-content;
@@ -101,4 +95,18 @@
   font-family: var(--bodyFont);
   font-weight: var(--regular);
   margin-bottom: 10px;
+}
+.phoneNumbersSection button{
+  width: 100%;
+  /* background-color: red; */
+}
+.controlBtns{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.controlBtns button{
+  flex: 1;
+  border-radius: 0;
 }
