--- a/web-app/src/app/(pages)/give/give.module.css
+++ b/web-app/src/app/(pages)/give/give.module.css
@@ -14,7 +14,6 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 3em 0  5em;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -22,14 +21,13 @@
 .rightSide{
   flex: 1;
   height: auto;
-  border: 1px solid #2423231A;
-  padding: 2em 0  3em;
+  padding: 3em 0  5em;
   }
 .rightSide form{
   background-color: var(--primary-100);
-  width: 50%;
+  width: 35%;
   height: auto;
-  padding: 2em 0;
+  padding: 1.5em 0;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -42,23 +40,23 @@
   font-family: var(--headerFont);
   font-size: var(--s);
   font-weight: var(--bold);
-  margin-bottom: 1.2em;
+  margin-bottom: 0.5em;
 }
 .formDivs{
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0.7em 3em;
-    margin-bottom: 10px;
+    padding: 0.35em 2.5em;
+    margin-bottom: 7px;
 }
-.formDivs label{
+/* .formDivs label{
    margin-bottom: 5px;
   font-family: var(--bodyFont);
   font-size: var(--p3);
   font-weight: var(--medium);
   color: var(--foreground);
-}
+} */
 .formDivs input{
   width: 100%;
   padding: 0.2em 0.5em;
