--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -338,15 +338,15 @@ ul.sublinks:hover {
 }
 
 .tableWrapper {
-  overflow-x: auto;
+  overflow-x: auto;   /*===========No need==============*/
   width: 100%;
 }
 
 .dataTable table {
   width: 100%;
+  height: 100%;
   border-collapse: collapse;
-  width: fit-content;
-  min-width: 600px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-size: var(--p3);
   cursor: default;
 }
@@ -357,7 +357,8 @@ ul.sublinks:hover {
   font-family: var(--headerFont);
   font-weight: var(--bold);
   font-size: var(--p2);
-  width: fit-content;
+  width: 100%;
+  text-align: left;
 }
 
 .dataTable thead:hover{
@@ -365,16 +366,16 @@ ul.sublinks:hover {
 }
 
 .dataTable th, .dataTable td {
-  width: fit-content; 
+  word-wrap: wrap;
+  width: 100%; 
+  height: 100%;
   padding: 1em;
-  text-align: left;
-  border: 1px solid var(--secondary-100);
+  /* border: 1px solid var(--secondary-100); */
 }
 .dataTable td:last-child{
-  width: 190px;
-  text-align: center;
+  display: flex;
+  align-items: center;
 }
-
 .dataTable td button{
   margin: 0 3px;
   display: none;
@@ -382,11 +383,9 @@ ul.sublinks:hover {
 .dataTable tr:hover button{
   display: inline-block;
 }
-
 .dataTable tr:nth-child(even) {
   background-color: var(--primary-100);
 }
-
 .dataTable tr:hover {
   background-color: var(--secondary-50);
 }
