--- a/web-app/src/app/(pages)/give/give.module.css
+++ b/web-app/src/app/(pages)/give/give.module.css
@@ -38,7 +38,7 @@
 }
 .rightSide h1{
   font-family: var(--headerFont);
-  font-size: var(--s);
+  font-size: var(--m);
   font-weight: var(--bold);
   margin-bottom: 0.5em;
 }
@@ -50,13 +50,6 @@
     padding: 0.35em 2.5em;
     margin-bottom: 7px;
 }
-/* .formDivs label{
-   margin-bottom: 5px;
-  font-family: var(--bodyFont);
-  font-size: var(--p3);
-  font-weight: var(--medium);
-  color: var(--foreground);
-} */
 .formDivs input{
   width: 100%;
   padding: 0.2em 0.5em;
@@ -66,8 +59,12 @@
   outline: none;
   border-radius: var(--br-1);
   letter-spacing: 1px;
+  background-color: var(--background);
   color: var(--foreground);
-  opacity: 0.7;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+.formDivs input::placeholder{
+  opacity: 0.5;
 }
 .giveButton{
   width:100%;
