--- a/web-app/src/app/(pages)/prayers/prayers.module.css
+++ b/web-app/src/app/(pages)/prayers/prayers.module.css
@@ -47,6 +47,9 @@
 .prayerPoints input{
   height: 2.5rem;
 }
+.prayerPoints input::placeholder{
+  opacity: 0.5;
+}
 .prayerPoints input:focus{
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--secondary-50);
@@ -95,4 +98,7 @@
   font-weight: var(--regular);
   letter-spacing: 1px;
   color: var(--foreground);
+}
+.counsellingForm textarea::placeholder{
+  opacity: 0.5;
 }
