--- a/web-app/src/app/globals.css
+++ b/web-app/src/app/globals.css
@@ -1,18 +1,18 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-  --hoverBg: #00000099;
-  --tertiary-100: #008E8F;
-  --tertiary-50: #80c7c7;
-  --primary-100: #F6F0DF;
-  --primary-50: #FCFBF5;
-  --secondary-100: #A9CBB7;
-  --secondary-50: #D4E5DB;
+  --background: hsl(0, 0%, 100%);
+  --foreground: hsl(0, 0%, 9%);
+  --hoverBg: hsla(0, 0%, 0%, 0.6);
+  --tertiary-100: hsl(180, 100%, 28%);
+  --tertiary-50: hsl(180, 39%, 64%);
+  --primary-100: hsl(44, 56%, 92%);
+  --primary-50: hsl(51, 54%, 97%);
+  --secondary-100: hsl(145, 25%, 73%);
+  --secondary-50: hsl(145, 25%, 86%);
   --headerFont: 'Ubuntu';
   --bodyFont: 'Poppins';
-  --l: 2.5rem;
-  --m: 2rem;
-  --s: 1.5rem;
+  --l: 2rem;
+  --m: 1.5rem;
+  --s: 1rem;
   --p1: 1.375rem;
   --p2: 1.125rem;
   --p3: 0.875rem;
@@ -29,10 +29,17 @@
 } */
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* :root {
+    --background: hsl(0, 0%, 0%);
+  --foreground: hsl(0, 0%, 91%);
+  --hoverBg: hsla(0, 0%, 0%, 0.4);
+  --tertiary-100: hsl(180, 100%, 72%);
+  --tertiary-50: hsl(180, 39%, 36%);
+  --primary-100: hsl(44, 56%, 8%);
+  --primary-50: hsl(51, 54%, 3%);
+  --secondary-100: hsl(145, 25%, 27%);
+  --secondary-50: hsl(145, 25%, 14%);
+  } */
 }
 * {
   margin: 0;
