--- a/web-app/src/app/sermons/sermons.module.css
+++ b/web-app/src/app/sermons/sermons.module.css
@@ -20,7 +20,6 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .sermonContent{
-  /* background: green; */
   flex: 1;
   padding: 3em 2em;
   display: flex;
@@ -44,20 +43,52 @@
   color: var(--foreground);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+.search input::placeholder{
+  opacity: 0.5;
+}
 .search input:focus{
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--secondary-50);
 }
-.clearButton{
+p.searchResponse{
+  font-family: var(--bodyFont);
+  font-weight: var(--regular);
+}
+.inputWrapper {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputWrapper input {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.clearButton {width: 0;
   position: absolute;
-  right: -85px;
-  top: 0.5rem;
-  transform: translateY(-50%);
+  left: 0;
+  top: 0;
+  height: 100%;
+  transform: translateY(-30%);
   background: transparent;
+  padding-right: 0.5em;
   border: none;
-  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  font-size: 1.25rem;
+  color: var(--hoverBg);
   cursor: pointer;
-  color: #999;
+  opacity: 0.5;
+}
+
+.clearButton:hover {
+  color: var(--foreground);
 }
 .sideBar button{
   width: 100%;
