Just commit file edits

--- a/web-app/src/app/(services)/service/services.module.css
+++ b/web-app/src/app/(services)/service/services.module.css
@@ -24,7 +24,7 @@
   padding: 7em;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 .dig h3{
