--- a/web-app/src/app/(pages)/admin/admin.module.css
+++ b/web-app/src/app/(pages)/admin/admin.module.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
 }
 .sideBar button{
@@ -105,7 +105,7 @@
   opacity: 0.97;
   z-index: 2;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 
