--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -68,7 +68,7 @@
   padding: 3em;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 .aboutContent h2{
@@ -98,7 +98,7 @@
   z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding-left: 5em;
   transition: all .3s ease;
 }
@@ -226,7 +226,7 @@
   background-color: var(--background);
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 10px;
   border-radius: 0 0 var(--br-2) var(--br-2);
   padding: 0.5em;
