--- a/web-app/src/app/sermons/sermons.module.css
+++ b/web-app/src/app/sermons/sermons.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .sermonContent{
@@ -80,7 +80,7 @@ p.searchResponse{
   border: none;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   font-size: 1.25rem;
   color: var(--hoverBg);
   cursor: pointer;
