--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -213,6 +213,7 @@ ul.sublinks:hover {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 3em 5em;
 }
@@ -244,7 +245,7 @@ ul.sublinks:hover {
 .quicklinks,
 .connect,
 .serviceHour{
-  width: 20%;
+  width: fit-content;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -500,3 +501,130 @@ ul.sublinks:hover {
 
 
 
+/* ==================== Responsive Media Queries ==================== */
+
+/* Tablet / Laptop view */
+@media only screen and (max-width: 960px) {
+  .address {
+    flex-direction: column;
+    padding: 0.5em 2em;
+    gap: 0.5em;
+    font-size: calc(var(--p3) * 0.9);
+  }
+  .socialIcons {
+    width: 100%;
+    justify-content: flex-start;
+    gap: 1em;
+  }
+  .navlinks {
+    /* flex-direction: column; */
+    padding: 1em 5em;
+  }
+  .links {
+    /* width: 100%;
+    margin-top: 0.5em; */
+    display: none;
+  }
+  .links ul {
+    flex-direction: column;
+    gap: 0.5em;
+  }
+  .heroSlide {
+    height: 200px;
+
+  }
+  .heroSlide h1 {
+    font-size: calc(var(--m) * 0.9);
+    padding: 0 1em;
+    text-align: center;
+  }
+  .footerContent {
+    /* flex-direction: column; */
+    padding: 2em;
+    gap: 2em;
+  }
+  .churchDetails,
+  .quicklinks,
+  .connect,
+  .serviceHour {
+    width: 100%;
+  }
+  .dataModalTable {
+    width: 80%;
+    padding: 1em;
+  }
+  .table {
+    min-width: 100%;
+  }
+  .buttons {
+    flex-direction: column;
+    gap: 0.5em;
+  }
+  .buttons button {
+    width: 100%;
+  }
+  .liveChatBox {
+    width: 40px;
+    height: 40px;
+    bottom: 10px;
+    right: 10px;
+  }
+}
+
+/* Mobile view */
+@media only screen and (max-width: 599px) {
+  .address {
+    padding: 0.5em 1em;
+    font-size: calc(var(--p3) * 0.8);
+  }
+  .socialIcons {
+    gap: 0.5em;
+  }
+  .navlinks {
+    padding: 0.5em 1em;
+  }
+  .links ul {
+    gap: 0.3em;
+  }
+  .heroSlide {
+    height: 150px;
+  }
+  .heroSlide h1 {
+    font-size: calc(var(--m) * 0.8);
+  }
+  .footerContent {
+    padding: 1em 1.5em;
+    gap: 1.5em;
+  }
+  .dataModalTable {
+    width: 95%;
+    top: 5%;
+  }
+  .table {
+    min-width: 100%;
+    font-size: calc(var(--p3) * 0.8);
+  }
+  .buttons {
+    gap: 0.3em;
+  }
+  .liveChatBox {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+/* Landscape orientation for small devices */
+@media only screen and (orientation: landscape) and (max-width: 800px) {
+  .heroSlide {
+    height: 180px;
+  }
+  .heroSlide h1 {
+    font-size: calc(var(--m) * 0.85);
+  }
+  .dataModalTable {
+    width: 85%;
+  }
+  .address {
+    font-size: calc(var(--p3) * 0.85);
+  }
+}
