--- a/web-app/src/app/home.module.css
+++ b/web-app/src/app/home.module.css
@@ -32,7 +32,7 @@
 }
 .detailImage{
   width: 100%;
-  height: 95dvh;
+  height: 70dvh;
   background: url('../../public/images/about-us-img-1-1.png') no-repeat center; 
   background-size: contain;
   background-blend-mode: overlay;
@@ -41,7 +41,6 @@
   width: 100%;
   height: auto;
   background: var(--tertiary-100);
-  color: var(--background);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,13 +53,13 @@
   font-family: var(--headerFont);
   font-weight: var(--medium);
   font-size: var(--s);
-  color: var(--foreground);
+  color: var(--background);
 }
 .pastorsDetails abbr{
   font-family: var(--bodyFont);
   font-weight: var(--regular);
   font-size: var(--p3);
-  color: var(--foreground);
+  color: var(--background);
 }
 .aboutContent{
   flex: 1;
@@ -84,7 +83,7 @@
   font-weight: var(--regular);
   color: var(--foreground);
   text-align: justify;
-  letter-spacing: 1px;
+  letter-spacing: 0;
   opacity: .8;
 }
 .prototype{
@@ -551,6 +550,10 @@
   .aboutContent {
     padding: 0em;
     margin: 0;
+  }
+  .prototype{
+    height: 30dvh;
+    padding-top: 0;
   }
   .projectContent{
     margin-left: -2.5em;
