--- a/web-app/src/app/(pages)/give/give.module.css
+++ b/web-app/src/app/(pages)/give/give.module.css
@@ -9,23 +9,35 @@
 .giveContainer{
   display: flex;
 }
- .leftSide{
-    width:20%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3em 0  5em;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+.leftSide {
+  width: 28%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;  /* centers horizontally */
+  justify-content: center; /* centers vertically (if parent has height) */
+  padding: 2em 0em;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+.categoryBtn {
+  width: 100%;
+  margin: 0.5em auto; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: block;
+}
+
 .rightSide{
   flex: 1;
-  height: auto;
-  padding: 3em 0  5em;
+  height: 80dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   }
 .rightSide form{
   background-color: var(--primary-100);
-  width: 35%;
+  width: 50%;
   height: auto;
   padding: 1.5em 0;
   margin: auto;
@@ -89,4 +101,40 @@
   width: 70%;
   margin: 0.5em 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 769px) {
+  .categoryBtn {
+    width: 60%;  
+    margin: 0.7em auto;
+  }
+}
+/* Mobile layout (≤768px) */
+@media (max-width: 768px) {
+  .giveContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .leftSide {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    padding: 1em;
+    box-shadow: none;
+  }
+
+  .categoryBtn {
+    width: 100%; 
+  }
+
+  .rightSide {
+    width: 100%;
+    height: 47dvh;
+    padding: 1em;
+  }
+
+  .rightSide form {
+    width: 100%;
+    margin-top: 1em;
+  }
 }
