--- a/web-app/src/app/components/components.module.css
+++ b/web-app/src/app/components/components.module.css
@@ -37,11 +37,14 @@
   top: 0;
   z-index: 2;
   background-color: var(--background);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease-in-out;
+
 } */
 .navbar {
-  position: relative;
+  position: sticky;
+  top: 0;
+  background-color: var(--background);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
   z-index: 100; 
 }
 .navlinks{
@@ -424,6 +427,7 @@ ul.sublinks {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   color: var(--background);
   font-weight: var(--medium);
+  font-size: 1rem;
   padding: 0.5em 1em;
   border: 0;
   outline: none;
