update give page

--- a/web-app/src/app/(pages)/give/give.module.css
+++ b/web-app/src/app/(pages)/give/give.module.css
@@ -30,7 +30,7 @@
 
 .rightSide{
   flex: 1;
-  height: 80dvh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
